update product edit request